# prj_dungeonclaw

./: .gitignore  README.md  README_KO.md  pyproject.toml
.agent/: FOR_ANTIGRAVITY.md  FOR_CODEX.md
app/: config.py  main.py
app/routers/: http.py  spectator.py  ws_agent.py
app/schemas/: auth.py  ws.py
app/services/: auth_store.py  challenge_service.py  chunk_generation.py  container.py  pathfinding.py  tick_engine.py
deploy/: .env.example  Caddyfile.example  README.md  docker-compose.yml
deploy/scripts/: backup.ps1  bootstrap.ps1  deploy.ps1  smoke-test.ps1  update.ps1
design/: architecture.md  backlog.md  branch-policy.md  challenge-strategy.md  chunk-rendering.md  class.md  component.md  deployment.md  design.md  erd.md  index.md  interface.md  milestones.md  planning.md  protocol.md  revision-guideline.md  sequence.md  simulation.md
frontend/: .env  mock-server.mjs  package-lock.json  package.json
frontend/design/: architecture.md  backlog.md
frontend/src/: App.vue
frontend/src/layout/: MainLayout.vue
frontend/src/router/: index.ts
frontend/src/views/: SpectateView.vue
openclaw/: GUIDE.md  SKILLS.md
tests/: test_api_ws_flow.py  test_challenge_service.py  test_chunk_generation.py  test_spectator_api.py  test_tick_engine.py
